# better-review

./: .gitignore  Cargo.toml  README.md  app.go  app_test.go  better-review  deno.json  go.mod  go.sum  i_like_potatos.md  install.sh  main.go  main.ts  parse.go  parser.ts  parser_test.ts  proxy.go  review_code_page.png:Zone.Identifier  review_tui.go  tui.go
.github/workflows/: ci.yml  release.yml
demo/: better-review.tape  setup-demo-repo.sh
demo/fixture/src/: audit.rs  config.rs  debug.rs  lib.rs
src/: app.rs  main.rs  settings.rs
src/domain/: diff.rs  mod.rs  model_catalog.rs  session.rs
src/services/: git.rs  mod.rs  opencode.rs  parser.rs
src/ui/: mod.rs  review.rs  styles.rs
