[package]
name = "rust-review"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
crossterm = { version = "0.29", features = ["event-stream"] }
fuzzy-matcher = "0.3"
patch = "0.7"
ratatui = "0.29"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tui-textarea = "0.7"

[dev-dependencies]
tempfile = "3.23"
